--- a/index_webapp.html
+++ b/index_webapp.html
@@ -23,7 +23,7 @@
         new daum.Postcode({
             oncomplete: function (data) {               
                 
-                window.postMessage(JSON.stringify(data));
+                window.postMessage(JSON.stringify(data), "*");
             },
             width: '100%',
             height: '100%',
