--- a/index_webapp.html
+++ b/index_webapp.html
@@ -24,6 +24,7 @@
             oncomplete: function (data) {               
                 
                 window.postMessage(JSON.stringify(data), "*");
+                window.parent.postMessage(JSON.stringify(data), "*");
             },
             width: '100%',
             height: '100%',
