--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ko">
 
 <head>
-    <meta charset="utf-8" />    
+    <meta charset="utf-8" />
+    <!-- viewport 추가, iOS Safari에서는 viewport가 없으면 desktop기준으로 화면이 표시됨, 2021.01.13 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <div id="layer" style="display:none;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
@@ -48,8 +50,8 @@
         var borderWidth = 0; //샘플에서 사용하는 border의 두께
 
         // 위에서 선언한 값들을 실제 element에 넣는다.
-        elemLayer.style.width = (window.innerWidth || document.documentElement.clientWidth) + 'px'; //width + 'px';
-        elemLayer.style.height = (window.innerHeight || document.documentElement.clientHeight) + 'px'; // height + 'px';
+        elemLayer.style.width = '100%';
+        elemLayer.style.height = '100%';        
         elemLayer.style.border = borderWidth + 'px solid';
         // 실행되는 순간의 화면 너비와 높이 값을 가져와서 중앙에 뜰 수 있도록 위치를 계산한다.
         elemLayer.style.left = borderWidth + 'px';	// (((window.innerWidth || document.documentElement.clientWidth) - width)/2 - borderWidth) + 'px';
